tests/language_modules/13_contract_blocks/valid/multiple_requires_ensures.vf
module MultipleRequiresEnsures

function clamp(amount: Integer) returns Integer
requires amount >= 0
requires amount <= 10
ensures result >= 0
ensures result <= 10
is
    return amount
end clamp

end MultipleRequiresEnsures