tests/language_modules/13_contract_blocks/invalid_semantics/requires_cannot_use_result.vf
module RequiresCannotUseResult

function current() returns Integer
requires result = 1
is
    return 1
end current

end RequiresCannotUseResult